--- a/css/scenario1.css
+++ b/css/scenario1.css
@@ -473,6 +473,11 @@ i.huge.icons {
   border-bottom: 3px solid #727374;
 }
 
+.garanties .ui.segment .ui.three.cards > .card.buttonStandAlone{
+  max-height:45px;
+}
+
+
 .garanties .ui.segment .ui.three.cards > .recommandation{
   position:relative;
 }
@@ -778,6 +783,14 @@ i.huge.icons {
   background: #14971d;
 }
 
+.garanties .ui.right.rail .ui.segment.selectionneur p.mention{
+  display: block;
+  margin-top: 7px;
+  opacity: 0.8;
+  font-size: 12px;
+  line-height: auto;
+}
+
 
 .garanties .ui.right.rail h5{
   font-family: 'urwfranklingothicw02regular';
@@ -885,6 +898,10 @@ border-top: 1px dashed #cccccc;
 .ui.dimmer .ui.modal .ui.basic.table thead th{
   padding-top: 25px;
   font-family: 'urwfranklingothicw02medium';
+}
+
+.ui.dimmer .ui.modal .ui.basic.table thead th.first{
+  /* padding-top: 10px; */
 }
 
 .ui.modal .ui.basic.table thead th.first{
@@ -998,14 +1015,16 @@ body.dimmed.dimmable{
 
 .ui.modal .cartTableWrapper{
   position: relative;
-  margin-top: 50px;
-  height: 450px;
-  max-height: 450px;
+  /* margin-top: 50px; */
+  height: 400px;
+  max-height: 400px;
   overflow:auto;
+  padding-top: 40px;
 }
 
 .ui.dimmer .ui.modal .cartTableWrapper{
   padding: 40px;
+  padding-top: 70px;
 }
 
 .mCS-dark.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
