--- a/css/scenario5.css
+++ b/css/scenario5.css
@@ -570,7 +570,7 @@ z-index: -2;
 
 /* Legende */
 
-.garanties .legende {
+#niveauxGaranties .ui.table tr th.legende {
   font-family: 'urwfranklingothicw02regular';
   font-weight: normal;
   text-align: left;
@@ -579,7 +579,11 @@ z-index: -2;
   line-height: 1.2rem;
 }
 
-.ui.padded.table th.legende{
+#niveauxGaranties .ui.table .ui.grid.legende{
+  margin-left: 0;
+}
+
+.ui.padded.table thead tr th.legende{
   padding-top: 0;
 }
 
